--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+:root {
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("./font/Inter-VariableFont_slnt\,wght.ttf") format("truetype");
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-display: block;
 }
 
 a {
